--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
     <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
@@ -28,14 +28,14 @@
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
       </ul>
     </section>
@@ -47,7 +47,7 @@
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
       </ul>
     </section>
