--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 <body>
   <header class="header">
-    <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-    <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
+    <a class="header__info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <section class="add-item">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+    <section class="add-task">
+      <h2>Add Item</h2>
+      <div class="add-task__wrapper">
+        <input type="text" class="task add-task__input" id="add-task-input">
+        <button class="add-task__btn" id="add-task-btn">Add</button>
       </div>
     </section>
     <section class="todo">
