--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
     <a class="header__info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <section class="add-task">
+    <section class="add-item">
       <h2>Add Item</h2>
-      <div class="add-task__wrapper">
-        <input type="text" class="task add-task__input" id="add-task-input">
-        <button class="add-task__btn" id="add-task-btn">Add</button>
+      <div class="add-item__wrapper">
+        <input type="text" class="task__item task__input task__input-add" id="task-input-add">
+        <button class="task__btn task__btn-add" id="task-btn-add">Add</button>
       </div>
     </section>
     <section class="todo">
       <h2>Todo</h2>
       <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="delete-icon"></button>
+        <li class="">
+          <input type="checkbox" class="task__checkbox">
+          <label class="task__item">Pay Bills</label>
+          <input type="text" class="task__item task__input">
+          <button class="task__btn task__btn-edit">Edit</button>
+          <button class="task__btn task__btn-delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
         <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg" alt="delete-icon"></button>
+          <input type="checkbox" class="task__checkbox">
+          <label class="task__item">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task__item task__input">
+          <button class="task__btn task__btn-edit">Save</button>
+          <button class="task__btn task__btn-delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
       </ul>
     </section>
@@ -44,11 +44,11 @@
       <h2>Completed</h2>
       <ul id="completed-tasks">
         <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="delete-icon"></button>
+          <input type="checkbox" class="task__checkbox" checked>
+          <label class="task__item">See the Doctor</label>
+          <input type="text" class="task__item task__input">
+          <button class="task__btn task__btn-edit">Edit</button>
+          <button class="task__btn task__btn-delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
       </ul>
     </section>
