--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
   <link rel="stylesheet" href="style.css" media="screen">
 </head>
 
-<body>
+<body class="page">
   <header class="header">
     <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
     <a class="header__info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <section class="add-item">
-      <h2>Add Item</h2>
-      <div class="add-item__wrapper">
+    <section class="section">
+      <h2 class="section__title">Add Item</h2>
+      <div class="task">
         <input type="text" class="task__item task__input task__input-add" id="task-input-add">
         <button class="task__btn task__btn-add" id="task-btn-add">Add</button>
       </div>
     </section>
-    <section class="todo">
-      <h2>Todo</h2>
+    <section class="section">
+      <h2 class="section__title">Todo</h2>
       <ul id="incomplete-tasks">
-        <li class="">
+        <li class="task">
           <input type="checkbox" class="task__checkbox">
           <label class="task__item">Pay Bills</label>
           <input type="text" class="task__item task__input">
           <button class="task__btn task__btn-edit">Edit</button>
           <button class="task__btn task__btn-delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
-        <li class="edit-mode">
+        <li class="task edit-mode">
           <input type="checkbox" class="task__checkbox">
           <label class="task__item">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task__item task__input">
@@ -40,10 +40,10 @@
         </li>
       </ul>
     </section>
-    <section class="completed">
-      <h2>Completed</h2>
+    <section class="section">
+      <h2 class="section__title">Completed</h2>
       <ul id="completed-tasks">
-        <li>
+        <li class="task">
           <input type="checkbox" class="task__checkbox" checked>
           <label class="task__item">See the Doctor</label>
           <input type="text" class="task__item task__input">
