--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="section">
       <h2 class="section__title">Add Item</h2>
       <div class="task">
-        <input type="text" class="task__item task__input task__input-add" id="task-input-add">
+        <input type="text" class="task__input task__input-add task__item" id="task-input-add">
         <button class="task__btn task__btn-add" id="task-btn-add">Add</button>
       </div>
     </section>
@@ -26,15 +26,15 @@
       <ul id="incomplete-tasks">
         <li class="task">
           <input type="checkbox" class="task__checkbox">
-          <label class="task__item">Pay Bills</label>
-          <input type="text" class="task__item task__input">
+          <label class="task__label task__item">Pay Bills</label>
+          <input type="text" class="task__input task__item">
           <button class="task__btn task__btn-edit">Edit</button>
           <button class="task__btn task__btn-delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
         <li class="task edit-mode">
           <input type="checkbox" class="task__checkbox">
-          <label class="task__item">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task__item task__input">
+          <label class="task__label task__item">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task__input task__item">
           <button class="task__btn task__btn-edit">Save</button>
           <button class="task__btn task__btn-delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
@@ -45,8 +45,8 @@
       <ul id="completed-tasks">
         <li class="task">
           <input type="checkbox" class="task__checkbox" checked>
-          <label class="task__item">See the Doctor</label>
-          <input type="text" class="task__item task__input">
+          <label class="task__label task__item">See the Doctor</label>
+          <input type="text" class="task__input task__item">
           <button class="task__btn task__btn-edit">Edit</button>
           <button class="task__btn task__btn-delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
