--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <section class="section">
       <h2 class="section__title">Add Item</h2>
       <div class="task">
-        <input type="text" class="task__input task__input-add task__item" id="task-input-add">
-        <button class="task__btn task__btn-add" id="task-btn-add">Add</button>
+        <input type="text" class="task__input task__input_add" id="task-input-add">
+        <button class="task__btn task__btn_add" id="task-btn-add">Add</button>
       </div>
     </section>
     <section class="section">
@@ -26,17 +26,17 @@
       <ul id="incomplete-tasks">
         <li class="task">
           <input type="checkbox" class="task__checkbox">
-          <label class="task__label task__item">Pay Bills</label>
-          <input type="text" class="task__input task__item">
-          <button class="task__btn task__btn-edit">Edit</button>
-          <button class="task__btn task__btn-delete"><img src="./remove.svg" alt="delete-icon"></button>
+          <label class="task__label">Pay Bills</label>
+          <input type="text" class="task__input">
+          <button class="task__btn task__btn_edit">Edit</button>
+          <button class="task__btn task__btn_delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
-        <li class="task edit-mode">
+        <li class="task task_edit-mode">
           <input type="checkbox" class="task__checkbox">
-          <label class="task__label task__item">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task__input task__item">
-          <button class="task__btn task__btn-edit">Save</button>
-          <button class="task__btn task__btn-delete"><img src="./remove.svg" alt="delete-icon"></button>
+          <label class="task__label task__label_edit-mode">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task__input task__input_edit-mode">
+          <button class="task__btn task__btn_edit">Save</button>
+          <button class="task__btn task__btn_delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
       </ul>
     </section>
@@ -45,10 +45,10 @@
       <ul id="completed-tasks">
         <li class="task">
           <input type="checkbox" class="task__checkbox" checked>
-          <label class="task__label task__item">See the Doctor</label>
-          <input type="text" class="task__input task__item">
-          <button class="task__btn task__btn-edit">Edit</button>
-          <button class="task__btn task__btn-delete"><img src="./remove.svg" alt="delete-icon"></button>
+          <label class="task__label task__label_completed">See the Doctor</label>
+          <input type="text" class="task__input">
+          <button class="task__btn task__btn_edit">Edit</button>
+          <button class="task__btn task__btn_delete"><img src="./remove.svg" alt="delete-icon"></button>
         </li>
       </ul>
     </section>
