--- a/index.html
+++ b/index.html
@@ -23,32 +23,38 @@
     </section>
     <section class="section">
       <h2 class="section__title">Todo</h2>
-      <ul id="incomplete-tasks">
+      <ul class="task-list" id="incomplete-tasks">
         <li class="task">
           <input type="checkbox" class="task__checkbox">
           <label class="task__label">Pay Bills</label>
           <input type="text" class="task__input">
           <button class="task__btn task__btn_edit">Edit</button>
-          <button class="task__btn task__btn_delete"><img src="./remove.svg" alt="delete-icon"></button>
+          <button class="task__btn task__btn_delete">
+            <img class="task__icon_delete" src="./remove.svg" alt="delete-icon">
+          </button>
         </li>
         <li class="task task_edit-mode">
           <input type="checkbox" class="task__checkbox">
           <label class="task__label task__label_edit-mode">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task__input task__input_edit-mode">
           <button class="task__btn task__btn_edit">Save</button>
-          <button class="task__btn task__btn_delete"><img src="./remove.svg" alt="delete-icon"></button>
+          <button class="task__btn task__btn_delete">
+            <img class="task__icon_delete" src="./remove.svg" alt="delete-icon">
+          </button>
         </li>
       </ul>
     </section>
     <section class="section">
       <h2 class="section__title">Completed</h2>
-      <ul id="completed-tasks">
+      <ul class="task-list" id="completed-tasks">
         <li class="task">
           <input type="checkbox" class="task__checkbox" checked>
           <label class="task__label task__label_completed">See the Doctor</label>
           <input type="text" class="task__input">
           <button class="task__btn task__btn_edit">Edit</button>
-          <button class="task__btn task__btn_delete"><img src="./remove.svg" alt="delete-icon"></button>
+          <button class="task__btn task__btn_delete">
+            <img class="task__icon_delete" src="./remove.svg" alt="delete-icon">
+          </button>
         </li>
       </ul>
     </section>
