refactor(extended-2.1): remove ids, get task input, btn and lists by classnames according to BEM

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <section class="section">
       <h2 class="section__title">Add Item</h2>
       <div class="task">
-        <input type="text" class="task__input task__input_add" id="task-input-add">
-        <button class="task__btn task__btn_add" id="task-btn-add">Add</button>
+        <input type="text" class="task__input task__input_add">
+        <button class="task__btn task__btn_add">Add</button>
       </div>
     </section>
     <section class="section">
       <h2 class="section__title">Todo</h2>
-      <ul class="task-list" id="incomplete-tasks">
+      <ul class="list list_incomplete">
         <li class="task">
           <input type="checkbox" class="task__checkbox">
           <label class="task__label">Pay Bills</label>
@@ -46,7 +46,7 @@
     </section>
     <section class="section">
       <h2 class="section__title">Completed</h2>
-      <ul class="task-list" id="completed-tasks">
+      <ul class="list list_completed">
         <li class="task">
           <input type="checkbox" class="task__checkbox" checked>
           <label class="task__label task__label_completed">See the Doctor</label>
